Qsampler - A LinuxSampler Qt GUI Interface
------------------------------------------

ChangeLog

SVN TRUNK

* Made lookup of translation files work inside a Mac OS X bundle.

* Minor Mac OS X compilation error fix.

* Debugging stacktrace now applies to all working threads.

* Made lookup of translation files more robust on Windows.

* Fixes for cross compiling and building for Windows with configure
  and make.

* libX11 is now being added explicitly to the build link phase,
  as seen necessary on some bleeding-edge distros eg. Fedora 13,
  Debian 6.

* Moving from old deprecated Qt3'ish custom event post handling
  into regular asynchronous signal/slot strategy. (EXPERIMENTAL)

* Sampler channel and instrument file requester support for
  other than GIG engine instrument files (*gig; *.dls) has
  been added, making roads for the newer SFZ and SF2 engines
  instrument files (*.sfz; *.sf2).

* General standard dialog buttons layout is now in place.

* Initial widget geometry and visibility persistence logic has
  been slightly revised as much to avoid crash failures due to
  wrong main widget hidden state.

* General source tree layout and build configuration change.

* Automatic crash-dump reports, debugger stack-traces (gdb), back-
  traces, whatever, are being introduced as a brand new configure
  option (--enable-stacktrace) and default enabled on debug build
  targets (--enable-debug).

* Attempt to fix broken instrument list model/view on Qt >= 4.6.

* Device parameter spin-box default maximum has been set higher:
  now at a magic 24-bit limit (16777216) instead of older 16-bit
  (65536), possibly fixing bug #136.

* LADISH Level 1 support has been added: SIGUSR1 signal trap
  just makes it a shortcut to File/Save.

* MIDI Device Status menu is disabled when no MIDI device exists;
  a menu separator has been added.

* Window manager's close button was found missing from the Devices
  and Instruments widgets when on Qt >= 4.5, now fixed.
