@@ -71,7 +71,7 @@ TRANSLATIONS += \
 
 unix {
 
-	#VARIABLES
+	# variables
 	OBJECTS_DIR = .obj
 	MOC_DIR     = .moc
 	UI_DIR      = .ui
@@ -80,12 +80,15 @@ unix {
 		PREFIX = /usr/local
 	}
 
-	BINDIR = $$PREFIX/bin
-	DATADIR = $$PREFIX/share
+	BINDIR = $(bindir)
+	DATADIR = $(datadir)
+	LOCALEDIR = $(localedir)
 
-	DEFINES += DATADIR=\"$$DATADIR\" PKGDATADIR=\"$$PKGDATADIR\"
+	DEFINES += BINDIR=\"$$BINDIR\"
+	DEFINES += DATADIR=\"$$DATADIR\"
+	DEFINES += LOCALEDIR=\"$$LOCALEDIR\"
 
-	#MAKE INSTALL
+	# make install
 	INSTALLS += target desktop icon
 
 	target.path = $$BINDIR
@@ -101,7 +104,7 @@ win32 {
 
 	CONFIG(debug, debug|release): CONFIG += console
 	INSTALLS += target
-	target.path = $$PREFIX/bin
+	target.path = $$BINDIR
 }
 
 macx {
